feat: ✨ Complete UI/UX redesign and modernization
🎨 Design Improvements:
- Added modern gradient background with glassmorphism effects
- Implemented responsive grid layout for repository cards
- Enhanced typography with system font stack
- Added smooth animations and hover effects

📊 New Features:
- Statistics dashboard showing repository metrics
- Rich repository cards with metadata (stars, forks, language, dates)
- Loading animations with spinner
- Error handling and empty states
- Language color indicators
- Accessibility improvements with ARIA labels

🛠 Technical Enhancements:
- Added Volta configuration for Node.js and Yarn versions
- Created StatsBar component for metrics display
- Improved component architecture with semantic HTML
- Enhanced CSS with modern techniques (CSS Grid, Flexbox)
- Updated documentation to reflect all changes

📱 Responsive Design:
- Mobile-first approach with breakpoint optimization
- Adaptive layout for all screen sizes
- Optimized touch interactions

♿ Accessibility:
- Semantic HTML structure
- ARIA labels for screen readers
- Keyboard navigation support

--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "volta": {
+    "node": "18.18.2",
+    "yarn": "1.22.19"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
